// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notification component pagination should render correctly 1`] = `
<Alert
  actionClose={null}
  className="notification-item"
  id="Foo"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  title="Bar"
  variant="success"
>
  description
</Alert>
`;

exports[`Notification component should render correctly 1`] = `
<Alert
  actionClose={null}
  className="notification-item"
  id="Foo"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  title="Bar"
  variant="success"
>
  description
</Alert>
`;

exports[`Notification component should render correctly with HTML description 1`] = `
<Alert
  actionClose={null}
  className="notification-item"
  id="Foo"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  title="Bar"
  variant="success"
>
  Some textanother
</Alert>
`;

exports[`Notification component should render correctly with HTML title 1`] = `
<Alert
  actionClose={null}
  className="notification-item"
  id="Foo"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  title="Some textanother"
  variant="success"
>
  description
</Alert>
`;

exports[`Notification component should render correctly with dismiss button 1`] = `
<Alert
  actionClose={
    <AlertActionCloseButton
      aria-label="close-notification"
      onClick={[Function]}
      variant="plain"
    >
      <CloseIcon
        color="currentColor"
        noVerticalAlign={false}
        size="sm"
      />
    </AlertActionCloseButton>
  }
  className="notification-item"
  id="Foo"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  title="Bar"
  variant="success"
/>
`;

exports[`Notification component should render correctly with sentryId 1`] = `
<Alert
  actionClose={null}
  className="notification-item"
  id="Foo"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  title="Bar"
  variant="success"
>
  description
  <TextContent>
    <Text
      component="small"
    >
      Tracking Id: 
      some-UUID
    </Text>
  </TextContent>
</Alert>
`;

exports[`Notification component should render correctly withouth description 1`] = `
<Alert
  actionClose={null}
  className="notification-item"
  id="Foo"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  title="Bar"
  variant="success"
/>
`;
